--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,22 @@ group = 'org.solidarizr'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+sourceSets {
+	integrationTest {
+		compileClasspath += main.runtimeClasspath
+		compileClasspath += test.runtimeClasspath
+		runtimeClasspath += main.runtimeClasspath
+		runtimeClasspath += test.runtimeClasspath
+	}
+}
+
+idea {
+	module {
+		testSourceDirs += sourceSets.integrationTest.java.srcDirs
+		downloadSources = true
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -19,5 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.cloud:google-cloud-dialogflow:0.82.0-alpha'
 	implementation 'org.telegram:telegrambots:4.1.2'
+	compileOnly 'org.projectlombok:lombok:1.18.6'
+	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
