--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.1.3.RELEASE'
 	id 'java'
 	id 'idea'
+	id 'application'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -9,6 +10,10 @@ apply plugin: 'io.spring.dependency-management'
 group = 'org.solidarizr'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+application {
+	mainClassName = 'org.solidarizr.agent.AgentApplication'
+}
 
 sourceSets {
 	integrationTest {
@@ -34,7 +39,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.cloud:google-cloud-dialogflow:0.82.0-alpha'
-	implementation 'org.telegram:telegrambots:4.1.2'
+	implementation 'com.github.pengrad:java-telegram-bot-api:4.1.1'
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
