Adding gradle wrapper and removing dialogflow properties

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,2 @@
-dialogflow:
-  projectName: ${DIALOGFLOW-PROJECT-ID}
-  languageCode: "pt-BR"
-  credentialsPath: ${GOOGLE_APPLICATION_CREDENTIALS}
+telegram:
+  token: ${TELEGRAM_BOT_TOKEN}
