Adding database implementation to the application

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,7 @@
 telegram:
   token: ${TELEGRAM_BOT_TOKEN}
+spring:
+  datasource:
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    url: ${DATABASE_URL}
