--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql:42.2.5'
+	implementation 'org.flywaydb:flyway-core:5.2.4'
 	implementation 'com.github.pengrad:java-telegram-bot-api:4.1.1'
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
