--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,5 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compile 'com.h2database:h2:1.4.199'
 }
